--- a/Foundations/1.Prerequisites.md
+++ b/Foundations/1.Prerequisites.md
@@ -2,7 +2,11 @@
 
 ## Noções Básicas de Informática
 
-O computador é um dispositivo eletrônico que manipula informações ou dados. Ele vê os dados como uns (1) e zeros(0) - código binário - e os combinam em coisas mais complexas (fotos, filmes, sites, jogos etc). Eles usam **Hardware** e **Software**. O primeiro é qualquer parte física do computador, seus componentes internos e externos, já o último é qualquer conjunto de intruções que diz ao hardware o que fazer (navegador web, reprodutor de mídia ou editor de texto)
+O computador é um dispositivo eletrônico que manipula informações ou dados. Ele vê os dados como dígitos binários, os uns (1 - com sinal) e zeros(0 - sem sinal) - código binário - e os combinam em coisas mais complexas (fotos, filmes, sites, jogos etc). A porção mínima que pode representar uma informação é 1 byte, que seriam 8 bits (01000001 por exemplo, que representa a letra A). 1024 bytes = 1Kb; 1024KB = 1MB; 1024MB = 1GB; 1024GB = 1TB; 1024TB = 1PB...
+
+OBS: MB != Mb. Megabytes, Gigabytes... é para armazenamento e Megabits, Gigabits... é para transmissão.
+
+O Computador usa **Hardware** e **Software**. O primeiro é qualquer parte física do computador, seus componentes internos e externos, já o último é qualquer conjunto de intruções que diz ao hardware o que fazer (navegador web, reprodutor de mídia ou editor de texto)
 
 ## Como a Web Funciona
 ### Como a Internet funciona?
@@ -10,7 +14,7 @@ A Web é um sistema de informações interligadas que permitem o acesso de conte
 
 Quando dois computadores precisam se comunicar, é preciso conectá-los, seja fisicamente (geralmente com um cabo Ethernet ) ou sem fio (por exemplo, com sistemas Wi-Fi ou Bluetooth ). Mas uma rede não é limitada a dois computadores. Você pode conectar quantos computadores desejar. Mas isto se torna complicado. Se você está tentando conectar, digamos, dez computadores, você irá precisar de 45 cabos, com 9 conexões por computador! Para resolver este problema, cada computador na rede está conectado a um pequeno computador especial chamado de roteador. Este roteador tem um único trabalho: como um sinalizador em uma estação de trem, ter certeza de que a mensagem enviada por um determinado computador chegue ao computador destinatário corretamente. 
 
-Mas para conectrar centenas, milhares, milhões de computadores? Conectando roteadores a roteadores, criando uma rede de computadores. Mas e para conectar a rede da nossa casa com o resto do mundo? Muito bem, já existem cabos ligados a sua casa, como por exemplo, cabos de eletricidade e telefone. A estrutura do telefone já conecta nossa casa com o resto do mundo, então é exatamente o que nós precisamos. Para conectar nossa rede a rede telefônica, precisamos de um equipamento especial chamado modem. Este modem transforma a informação da nossa rede em uma informação gerenciável pela rede telefônica e vice-versa.
+Mas para conectrar centenas, milhares, milhões de computadores? Conectando roteadores a roteadores, criando uma rede de computadores. Mas e para conectar a rede da nossa casa com o resto do mundo? Muito bem, já existem cabos ligados a sua casa, como por exemplo, cabos de eletricidade e telefone. A estrutura do telefone já conecta nossa casa com o resto do mundo, então é exatamente o que nós precisamos. Para conectar nossa rede a rede telefônica, precisamos de um equipamento especial chamado modem. Este modem faz modulação e demodulação, ou seja, transforma a informação da nossa rede em uma informação gerenciável pela rede telefônica e vice-versa.
 
 Então nós estamos conectados à infraestrutura telefônica. O próximo passo é enviar mensagens da nossa rede para a rede que nós desejamos alcançar. Para fazer isto, vamos precisar conectar nossa rede a um Provedor de Serviço de Internet (ISP, em inglês). Um ISP é uma companhia que gerencia alguns roteadores especiais que são conectados e podem também acessar roteadores de outros ISPs. Então a mensagem da nossa rede é transportada para a rede de redes do ISP e então para a rede de destino. A Internet é composta por toda esta infraestrutura de redes.
 
