Mais conteúdo HTML

--- a/Foundations/3.HTML_foundations.md
+++ b/Foundations/3.HTML_foundations.md
@@ -4,20 +4,75 @@
 
 HTML e CSS são duas linguagens que trabalham juntas para criar tudo o que vemos quando navegamos na internet. HTML são os dados brutos com os quais uma página web é construída. Todo o texto, links, cartões, listas e botões são criados em HTML. CSS é o que adiciona estilo a esses elementos simples. HTML insere informações em uma página web, e CSS posiciona essas informações, dá cor, altera a fonte e deixa tudo com uma aparência melhor.
 
-HTML e CSS não são linguagens de programação; elas não programam nenhuma lógica, apenas apresentam informações. Jasvascript é uma linguagem de programação porque é usada para fazer páginas da web executarem tarefas. 
+HTML e CSS não são linguagens de programação; elas não programam nenhuma lógica, apenas apresentam informações. Jasvascript é uma linguagem de programação porque é usada para fazer páginas da web executarem tarefas.  Não se programa em HTML e CSS, você desenvolve com essas linguagens de marcação.
 
 ### HTML
 
-HTML (Hypertext Markup Language) é uma linguagem que determina como documentos e páginas da web são exibidos em um navegador da web, a linguagem dos blocos de construção de qualquer site. Ou seja, HTML serve para criar a estrutura dd design da página web e controlar o layut do conteúdo; ele é a fundação de qualquer página web.
+HTML (Hypertext Markup Language) é uma linguagem que determina como documentos e páginas da web são exibidos em um navegador da web, a linguagem dos blocos de construção de qualquer site. Ou seja, HTML serve para criar a estrutura de design da página web e controlar o layut do conteúdo; ele é a fundação de qualquer página web. Dessa forma, HTML é uma linguagem focada em **conteúdo** (textos, imagens, vídeos, tabelas etc)
+
+#### Exemplos:
+
+`<h1>Exemplo de título</h1>` -> os `<h1> e </h1>` são a abertura e fechamento de tag. O que está escrito dentro deles é o conteúdo
+
+`<p>Exemplo de parágrafo</p>`
+
+`imgsrc="foto.png"alt="Exemplo de foto">` -> Tag para colocar foto na tela. `imgsrc` é a abertura de tag, esse tipo não tem fechamento. `alt=` é o parâmetro. `"Exemplo de foto"` é o valor.
+
+#### Estrutura básica:
+```
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+        content="width=device-width,
+        initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>Olá, Mundo!</h1>
+    </body>
+</html>
+```
+
+`<!DOCTYPE html>` -> tag de configuração que informa que será usado html
+
+`<html lang="pt-br">` e `,/html` -> abertura e fechamento, com o parâmetro que indica o idioma do conteúdo
+
+`<head>` -> um para abrir, outro para fechar. Área de configurações
+
+`<meta charset="UTF-8">` -> codificação que indica que o site será compatível com a acentuações
+
+`<meta name=... e content=` -> o site vai ocupar 100% da parte branca do navegador e vai ser vizualizado numa escala de 100%
+
+`<title>Document</title>` -> título do site
+
+`<body>` -> um para abrir, outro para fechar. Área de corpo, onde fica o site, o conteúdo.
 
 ### CSS
 
-CSS (Cascading Style Sheets) é uma linguagem de folha de estilo popular que determina como um documento criado em HTML é estilizado (cores, estilos de fonte, layout e recursos responsivos). Ou seja, CSS serve para estilizar os elementos da página web, deixando-as mais responsivas a tela do usuário e mais atraentes visulamente.
+CSS (Cascading Style Sheets) é uma linguagem de folha de estilo popular que determina como um documento criado em HTML é estilizado (cores, estilos de fonte, layout e recursos responsivos). Ou seja, CSS serve para estilizar os elementos da página web, deixando-as mais responsivas a tela do usuário e mais atraentes visulamente. Dessa forma, CSS foca em **design** (cores, sombras, tamanhos, posiciionamento etc)
 
+#### Exemplo:
+
+```
+h1{
+    font-family: Arial;
+    font-size: 20pt;
+    color: blue;
+    }
+```
+`h1` é o seletor. O que está entre colchetes é a declaração, estou dizendo que a fonte deve ser arial, tamanho 20, e cor azul. `color` e os outros são a propriedade e o que eles informam é o valor. 
 
 ### Javascript
 
-O JavaScript permite que você altere elementos CSS e HTML no seu site depois que ele for carregado, o que lhe dá a capacidade de tornar seu site mais interativo e envolvente para os usuários com animações, mídia de vídeo incorporada e muito mais. Ou seja, Javascript é o que dá interatividade à página web, JS controla as funções complexas e as características, é o código de programação que melhora a funcionabilidade ao permitir que você altere efetivamente os componentes HTML e CSS do seu site para corresponder precisamente às suas especificações.
+O JavaScript permite que você altere elementos CSS e HTML no seu site depois que ele for carregado, o que lhe dá a capacidade de tornar seu site mais interativo e envolvente para os usuários com animações, mídia de vídeo incorporada e muito mais. Ou seja, Javascript é o que dá interatividade à página web, JS controla as funções complexas e as características, é o código de programação que melhora a funcionabilidade ao permitir que você altere efetivamente os componentes HTML e CSS do seu site para corresponder precisamente às suas especificações. Dessa forma, JS foca em **interações** (menus interativos, animações, popups, validações etc)
 
+Fontes adicionais: 
 
-Fonte: https://www.brytdesigns.com/html-css-javascript-whats-the-difference#HTML_Content_Layout
+https://www.brytdesigns.com/html-css-javascript-whats-the-difference#HTML_Content_Layout
+
+https://youtu.be/B4FU3NFRTDw
+
+## Elementos e Tags
+
