Continuação do curso

--- a/Foundations/3.HTML_foundations.md
+++ b/Foundations/3.HTML_foundations.md
@@ -158,8 +158,32 @@ Indentação é utilizada para tornar o nível de aninhamento claro e legível p
 
 Os comentários em HTML não são visíveis para o navegador; eles nos permitem comentar em nosso código para que outros desenvolvedores ou nós mesmos no futuro possam lê-los e obter algum contexto sobre algo que pode não estar claro no código.
 
-Para escrever um comentário em HTML, basta incluir as tags ``<!--`` e ``-->``.
+Para escrever um comentário em HTML, basta incluir as tags `<!--` e `-->`.
 
 No VSCode, há um atalho para os comentários: `Ctrl` + `/`. Há também um atalho para lorem ipsun..., basta digita `lorem` + `Enter` que o VSCode completa.
 
 ## Listas
+
+### Listas Não Ordenadas
+
+Para listas em que a ordem não importa, utilizamos os elementos `<ul>` e `</ul>` para cria-la e cada item da lista é criado usando `<li>` e `</li>`.
+
+### Listas Ordenadas
+
+Para listas em que a ordem importa, utilizamos os elementos `<ol>` e `</ol>` para cria-la e cada item da lista é criado usando `<li>` e `</li>`. Nesse caso, cada item começará com um número.
+
+## Links e Imagens
+
+### Elementos de Ancoragem
+
+Para criar um link em HTML, usamos o elemento âncora. Um elemento âncora é definido envolvendo o texto ou outro elemento HTML que queremos que seja um link com uma tag `<a>`.
+
+Mas o elemento âncora por si só não faz nada. Isso ocorre porque uma tag de âncora por si só não sabe para onde queremos direcionar o link. Precisamos informar a ela um destino. Fazemos isso usando um atributo HTML. Um atributo HTML fornece informações adicionais a um elemento HTML e sempre aparece na tag de abertura do elemento. Um atributo geralmente é composto de duas partes: um nome e um valor; no entanto, nem todos os atributos exigem um valor.No nosso caso, precisamos adicionar um atributo `href`  (referência de hipertexto) à tag de âncora de abertura. O valor do atributo `href` é o destino para onde queremos que nosso link vá.
+
+Ex:
+
+ `<a href="https://www.theodinproject.com/about">Sobre o Odin Project</a>`
+
+Por padrão, qualquer texto encapsulado com uma tag de âncora sem um atributo `href` parecerá texto simples. Se o atributo `href` estiver presente, o navegador dará ao texto uma cor azul e o sublinhará para indicar que se trata de um link. Vale ressaltar que você pode usar tags âncora para criar links para qualquer tipo de recurso na internet, não apenas para outros documentos HTML. Você pode criar links para vídeos, arquivos PDF, imagens e assim por diante, mas, na maioria dos casos, você estará criando links para outros documentos HTML.
+
+### Abrindo Links em uma Nova Aba
