--- a/Foundations/1.Prerequisites.md
+++ b/Foundations/1.Prerequisites.md
@@ -117,7 +117,23 @@ https://developer.mozilla.org/en-US/docs/Learn_web_development/Howto/Web_mechani
 
 ## Linhas de Comando - Noções Básicas
 
-## The Unix Shell
+A tela preta com o prompt é a CLI (Command Line Interface). Nela, é possível dar comandos que o computador fará. As Linhas de Comando é a base para iniciar outros programas e interagir com eles.
+
+Pelo Linux, o terminal é aberto pressionando `Ctrl`  + `Alt` + `T`. No macOS é `Cmd` + `Espaço` e procurar pelo terminal. No Windows: Git Bash.
+
+$ whoami retorna meu nome de usuário
+
+* OBS: comandos no terminal que exigem senha, como sudo. os caracteres ficam invisíveis, mas o que for digitado será registrado, é apenas uma medida de segurança.
+
+No terminal, deve-se utilizar `Ctrl` + `Shift` + `C` para copiar e `Ctrl` + `Shift` + `V` para colar.
+
+Não é preciso digitar tudo para ir até uma pasta, como `~/Documents/Odin-Project/foundations/javascript/calculator/.` Basta digitar `cd d` e `Tab` para ele completar, tendo várias pastas, basta digitar o início do que deseja alcançar e dar tab novamente. Ex: `cd Doc[tab]O[tab]f[tab]j[tab]cal[tab]`
+
+Há um atalho muito útil para abrir tudo dentro de um diretório de projeto: ..Por exemplo, se você tiver o VS Code instalado, pode cd, entrar no diretório do projeto e digitar code . (com o ponto final). Isso iniciará o VS Code e abrirá a pasta do projeto na barra lateral.
+
+Linux : Você pode abrir o VSCode na linha de comando digitando code, e pode abrir pastas ou arquivos adicionando o nome do local depois dele: code my_awesome_project/.
+
+### The Unix Shell
 
 Um shell é um programa cujo objetivo principal é ler comandos e executar outros programas. Esta lição usa o Bash, o shell padrão em muitas implementações do Unix. Os programas podem ser executados no Bash digitando comandos no prompt de linha de comando. As principais vantagens do shell são sua alta proporção de ação por tecla, seu suporte para automatizar tarefas repetitivas e sua capacidade de acessar máquinas em rede.
 
@@ -127,14 +143,14 @@ $ pwd = Print Working Directory: mostra em qual diretório você está. Os coman
 * A saída foi c/Users/Caio. /Users/Caio está armazenado dentro /Users porque /Users é a primeira parte do seu nome. Da mesma forma, sabemos que /Users está armazenado dentro do diretório raiz /porque seu nome começa com /
 
 $ ls -F indica ls a classificação da saída adicionando um marcador aos nomes de arquivos e diretórios para indicar quais são:
-* um final /: indica que este é um diretório
-* @: indica um link
-* *: indica um executável
+* um final `/`: indica que este é um diretório
+* `@`: indica um link
+* `*`: indica um executável
 
-$ ls --help dá mais informações sobre como usar o comando/programa
+`$ ls --help` dá mais informações sobre como usar o comando/programa
 
 O comando para alterar locais é cd seguido por um nome de diretório para alterar nosso diretório de trabalho. cd "change directory" significa "alterar diretório", o que é um pouco enganoso. O comando não altera o diretório; ele altera o diretório de trabalho atual do shell. Só cd volta ao diretório inicial.
 
-. por si só significa 'o diretório atual'; .. significa 'o diretório acima do atual'.
+`.` por si só significa 'o diretório atual'; `..` significa 'o diretório acima do atual'.
 
-mkdir + nome -> criar diretório
+`mkdir` + nome -> criar diretório
