--- a/Foundations/3.HTML_foundations.md
+++ b/Foundations/3.HTML_foundations.md
@@ -187,3 +187,27 @@ Ex:
 Por padrão, qualquer texto encapsulado com uma tag de âncora sem um atributo `href` parecerá texto simples. Se o atributo `href` estiver presente, o navegador dará ao texto uma cor azul e o sublinhará para indicar que se trata de um link. Vale ressaltar que você pode usar tags âncora para criar links para qualquer tipo de recurso na internet, não apenas para outros documentos HTML. Você pode criar links para vídeos, arquivos PDF, imagens e assim por diante, mas, na maioria dos casos, você estará criando links para outros documentos HTML.
 
 ### Abrindo Links em uma Nova Aba
+
+O método anterior abre o link na mesma página, para fazer o mesmo em outra, é preciso do atributo `target`. Enquanto `href` especifica o link de destino, `target` especifica onde o recurso vinculado será aberto. Se não estiver presente, por padrão, assumirá o valor `_self` que abre o link na aba atual. Para abrir o link em uma nova aba ou janela (dependendo das configurações do navegador),deve-se definir o valor `_blank`
+
+Utiliza-se também o atributo rel para descrever a relação entre a página atual e o documento vinculado. A exemplo, podemos dar a `rel` o valor `nooperner` para garantir que um link aberto em uma nova aba ou janela não possa interagir ou acessar a página original. Sem ele, a nova página pode usar JavaScript para manipular a página original, o que representa um risco à segurança. Há também o valor `noreferrer` para garantir que a nova página não possa ver o endereço da página de referência (privacidade) e impede que ela acesse a página original (segurança). É possível também usar os dois ao mesmo tempo.
+
+É fundamental usá-los por motivo de segurança. A prevenção de acesso causada por `noopener` previne ataques de phishing, nos quais o link aberto pode alterar a página original para uma diferente, a fim de enganar os usuários. Adicionar o `noreferrer` pode ser feito se você desejar que o link aberto não saiba que sua página da web está vinculada a ele.
+
+### Links Absolutos e Relativos
+
+**Links absolutos** são os links para páginas em outros sites na internet. Um link absoluto sempre conterá o esquema e o domínio do destino, geralmente composto assim: scheme://domain/path. O link utilizado no "Sobre o Odin Project" era um link absoluto pois contém o esquema e o domínio: https://www.theodinproject.com/about
+
+**Links relativos** são links para outras páginas dentro do próprio site. Links relativos não incluem o nome de domínio, pois, como se trata de outra página no mesmo site, presume-se que o nome de domínio seja o mesmo da página na qual criamos o link. Assim, incluem apenas o caminho do arquivo para a outra página, relativo à página na qual você está criando o link.
+
+Para isso, criei mais um arquivo `.html` para a página "about" e referenciei ela pelo elemento âncora `<a>` no index, permitindo acessar a outra página mesmo sem digitar o link completo. Isso ocorre pois estão no mesmo diretório. Entretanto, geralmente apenas o `index.html` fica no diretório raiz e os outros arquivos em diretório próprios. Logo, ao acessar páginas de outros diretórios, é preciso usar `<a href="./nome do diretório/nome do html">`. Utiliza-se o `./`antes para o código começar a procurar pelo diretório atual.
+
+## Imagens
+
+Para exibir uma imagem em HTML, usamos o elemento `<img>`. Ao contrário dos outros elementos que encontramos, o `<img>` é um elemento vazio, ou seja, não precisa de uma tag de fechamento porque são naturalmente vazios e não contêm nenhum conteúdo. Em vez de envolver o conteúdo com uma tag de abertura e fechamento, ele incorpora uma imagem na página usando um atributo `src` que informa ao navegador onde o arquivo de imagem está localizado. O `src` funciona de forma semelhante ao `href` para tags de âncora. Ele pode incorporar uma imagem usando caminhos absolutos e relativos.
+
+Para usar a imagem no arquivo sobre `.html` por exemplo, precisaria digitar `<img src="../imagens/dog.jpg">` para o código voltar ao diretório pai e aí sim ir atrás da foto.
+
+Cada imagem deve ter um elemento `alt` atribuído a ela para descrevê-la. Ele será usado no lugar da imagem se ela não puder ser carregada. Também é usado com leitores de tela para descrever o que a imagem é para usuários com deficiência visual.
+
+Além disso, é possível especificar atributos de altura (`height=`) e largura (`width=`) em tags de imagem para ajudar o navegador a criar o layout da página sem problemas. É um bom hábito sempre especificar esses atributos em cada imagem, mesmo quando a imagem estiver no tamanho correto ou você estiver usando CSS para modificá-la.
